# gata

./: Cargo.toml  README.md
crates/gata_core/: Cargo.toml
crates/gata_patterns/: Cargo.toml
crates/gata_types/: Cargo.toml
crates/gata_validate/: Cargo.toml
examples/: email.rs
