[package]
name = "regez"
version = "0.0.1"
authors = ["actuallylost"]
readme = "README.md"
repository = "https://github.com/actuallylost/regez"
edition = "2021"
publish = true

[workspace]
members = ["crates/*"]

[[test]]
path = "tests/lib.rs"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false

[profile.dev]
opt-level = 3
debug = true

[profile.test]
opt-level = 3
debug = true
