[package]
name = "gata"
version = "0.1.0"
authors = ["actuallylost"]
readme = "README.md"
repository = "https://github.com/actuallylost/gata"
edition = "2021"
publish = true

[workspace]
members = ["crates/*", "examples/*"]

# TODO: Add features
[features]

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false

[profile.dev]
opt-level = 3
debug = true

[profile.test]
opt-level = 3
debug = true
